  called.
* The module `mediawiki.icon` has been deprecated. Use the Codex mixin instead
  (T351681).
* Passing a WikiPage to PageEditStash::parseAndCache() has been deprecated.
  Use PageUpdater instance.
* (T352284) Some user options-related classes were moved over to the existing
  MediaWiki\User\Options namespace. Old names are deprecated and kept as
  aliases for backwards-compatibility:
   - DefaultOptionsLookup
   - UserOptionsLookup
   - UserOptionsManager
   - StaticUserOptionsLookup
* …

=== Other changes in 1.42 ===
* Gallery: Image captions are no longer wrapped in <p> tags. Skins that
  customize rendering for galleries may need to tweak their CSS.
* …

== Compatibility ==

MediaWiki 1.42 requires PHP 7.4.3 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MariaDB is the recommended database software. MySQL, PostgreSQL, or SQLite can
be used instead, but support for them is somewhat less mature.

The supported versions are:

* MariaDB 10.3 or higher
* MySQL 5.7.0 or higher
* PostgreSQL 10 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except
for pages that explicitly state that their contents are in the public domain):

       https://www.mediawiki.org/wiki/Special:MyLanguage/Documentation

== Mailing list ==
A mailing list is available for MediaWiki user support and discussion:

       https://lists.wikimedia.org/mailman/listinfo/mediawiki-l

A low-traffic announcements-only list is also available:

       https://lists.wikimedia.org/mailman/listinfo/mediawiki-announce

It's highly recommended that you sign up for one of these lists if you're
going to run a public MediaWiki, so you can be notified of security fixes.

== IRC help ==
There's usually someone online in #mediawiki on irc.libera.chat.