@@ -665,13 +665,16 @@ class DatabaseMySQL extends Database {
 	/**
 	 * Lists VIEWs in the database
 	 *
+	 * @since 1.22
+	 * @deprecated since 1.42
+	 *
 	 * @param string|null $prefix Only show VIEWs with this prefix, eg.
 	 * unit_test_, or $wgDBprefix. Default: null, would return all views.
 	 * @param string $fname Name of calling function
 	 * @return array
-	 * @since 1.22
 	 */
 	public function listViews( $prefix = null, $fname = __METHOD__ ) {
+		wfDeprecated( __METHOD__, '1.42' );
 		$qb = $this->newSelectQueryBuilder()
 			->select( 'table_name' )
 			->from( 'information_schema.views' )
