@@ -118,6 +118,9 @@ interface IMaintainableDatabase extends IDatabase {
 	/**
 	 * Lists all the VIEWs in the database
 	 *
+	 * @deprecated since 1.42 This was previously used to filter views out of the return
+	 *   value of listTables(), but listTables() no longer includes views.
+	 *
 	 * @param string|null $prefix Only show VIEWs with this prefix, eg. unit_test_
 	 * @param string $fname Name of calling function
 	 * @throws RuntimeException
@@ -145,7 +148,9 @@ interface IMaintainableDatabase extends IDatabase {
 	);
 
 	/**
-	 * List all tables on the database
+	 * List all tables on the database.
+	 *
+	 * Since MW 1.42, this will no longer include MySQL views.
 	 *
 	 * @param string|null $prefix Only show tables with this prefix, e.g. mw_
 	 * @param string $fname Calling function name
