@@ -281,6 +281,9 @@ because of Phabricator reports.
    - UserOptionsLookup
    - UserOptionsManager
    - StaticUserOptionsLookup
+* Database::listViews() has been deprecated. This was previously used to filter
+  views out of the return value of Database::listTables(). Now listTables()
+  will not include views. MediaWiki does not use views.
 * …
 
 === Other changes in 1.42 ===
